# programming_language

CMakeHomework/: .gitmodules  CMakeLists.txt
CMakeHomework/square/: CMakeLists.txt
CMakeHomework/square/inc/square/: square.h
CMakeHomework/square/src/: square.cpp  square.h
CMakeHomework/src/: main.cpp
HW1_F74051051/: diff.lsp  fib.lsp  file1.txt  file2.txt  merge_sort.lsp  palindrome.lsp  prime.lsp
HW2_F74051051/: paper_parser.py
HW3_F74051051/: goldbach.pl  lowest_common_ancestor.pl  reachable.pl
